# python-payloadclient

./: .gitreview  .testr.conf  HACKING.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
payloadclient/: client.py  test.py  version.py
payloadclient/cmd/: shell.py
payloadclient/common/: exception.py  http.py  utils.py
payloadclient/openstack/common/: gettextutils.py  jsonutils.py  log.py  strutils.py
payloadclient/shell/v1/: agent.py  base.py  queue.py
payloadclient/tests/: utils.py
payloadclient/tests/v1/: test_agent.py  test_agents.py  test_queue.py  test_queues.py
payloadclient/v1/: agent.py  agents.py  base.py  client.py  queue.py  schemas.py  shell.py
payloadclient/v1/queues/: __init__.py
stripeclient/: client.py  version.py
stripeclient/cmd/: cli.py  shell.py
stripeclient/common/: exception.py  http.py  utils.py
stripeclient/openstack/common/: gettextutils.py  jsonutils.py  log.py  strutils.py
stripeclient/tests/: utils.py
stripeclient/tests/v1/: test_agents.py  test_queues.py  test_users.py
stripeclient/v1/: agents.py  cli.py  client.py  queues.py  shell.py
stripeclient/v1/queues/: __init__.py
stripeclient/v1/users/: __init__.py  shell.py
