[metadata]
name = python-stripeclient
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
summary = Client library for Stripe API
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Asterisk
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    stripeclient

[entry_points]
console_scripts =
    stripe = stripeclient.cmd.shell:main
stripe.shell =
    queue add = stripeclient.v1.shell:QueueAdd
    queue rm = stripeclient.v1.shell:QueueDelete
    queue show = stripeclient.v1.shell:QueueShow

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1
